# short-names-rs

./: Cargo.toml  README.md
src/: iter.rs  lib.rs  option.rs  result.rs
