[package]
name = "short-names"
version = "0.1.1"
edition = "2021"

authors = ["A4-Tacks <wdsjxhno1001@163.com>"]
keywords = ["no_std", "iterator", "option", "result"]
categories = ["no-std", "no-std::no-alloc"]
description = "Add very short names to some methods in the core"

license = "MIT"
repository = "https://github.com/A4-Tacks/short-names-rs"
readme = "README.md"

[dependencies]
